--- a/src/content/blog/improve-workflow-with-ai.mdx
+++ b/src/content/blog/improve-workflow-with-ai.mdx
@@ -3,7 +3,7 @@ title: "10 Ways to Improve Your Development Workflow with AI"
 description: "Practical tips and strategies to integrate AI tools into your daily development routine for maximum productivity."
 date: "2025-10-01"
 author: "codewise-ai.vercel.app Team"
-image: "/images/blog/workflow-ai.svg"
+image: "/images/blog/10_Improve_Development.png"
 tags: ["Productivity", "AI", "Workflow", "Tips"]
 category: "Tutorials"
 featured: true
