fix: update all instances of codewise-ai.vercel.app to codewize-ai.website across the application

--- a/src/content/blog/improve-workflow-with-ai.mdx
+++ b/src/content/blog/improve-workflow-with-ai.mdx
@@ -2,7 +2,7 @@
 title: "10 Ways to Improve Your Development Workflow with AI"
 description: "Practical tips and strategies to integrate AI tools into your daily development routine for maximum productivity."
 date: "2025-10-01"
-author: "codewise-ai.vercel.app Team"
+author: "codewize-ai.website Team"
 image: "/images/blog/10_Improve_Development.png"
 tags: ["Productivity", "AI", "Workflow", "Tips"]
 category: "Tutorials"
