--- a/src/content/blog/ai-vs-human-coding.mdx
+++ b/src/content/blog/ai-vs-human-coding.mdx
@@ -2,7 +2,7 @@
 title: "AI vs Human Coding: The Future of Software Development"
 description: "Exploring the evolving relationship between AI and human developers. What does the future hold for software engineering?"
 date: "2025-09-28"
-author: "codewise-ai.vercel.app Team"
+author: "codewize-ai.website Team"
 image: "/images/blog/AI_vs_Human.png"
 tags: ["AI", "Career", "Future", "Opinion"]
 category: "Industry Insights"
