--- a/src/content/blog/best-ai-tools-2025.mdx
+++ b/src/content/blog/best-ai-tools-2025.mdx
@@ -2,7 +2,7 @@
 title: "Top 10 Free AI Tools for Developers in 2025"
 description: "Discover the best free AI tools to supercharge your development workflow in 2025. From code completion to terminal assistants."
 date: "2025-10-05"
-author: "codewise-ai.vercel.app Team"
+author: "codewize-ai.website Team"
 image: "/images/blog/10_Free_AI_Tools.png"
 tags: ["AI", "Development", "Tools", "Productivity"]
 category: "AI Tools"
