--- a/src/content/blog/react-server-components-security-threat-model-safe-patterns.mdx
+++ b/src/content/blog/react-server-components-security-threat-model-safe-patterns.mdx
@@ -106,7 +106,8 @@ const authenticateUser = (token) => {
 Keep sensitive information, such as API keys and database credentials, out of your codebase by using environment variables. This practice reduces the risk of exposing sensitive data.
 
 **Example:** 
-```dotenv
+```
+dotenv
 # .env
 DATABASE_URL=your_database_url
 JWT_SECRET=your_secret_key
